--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -30,7 +30,7 @@
             <a class="nav-link" href="{% url 'about' %}">About</a>
           </li>
           <li
-          {% if 'index' in request.path %}
+          {% if 'listings' in request.path %}
                  class="nav-item active mr-3"
           {% else %}
                   class="nav-item mr-3"
